WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304912
[JSC] GreedyRegAlloc: fix asserts with overlapping tmps coalesced to a pinned register
https://bugs.webkit.org/show_bug.cgi?id=304912
Summary
[JSC] GreedyRegAlloc: fix asserts with overlapping tmps coalesced to a pinned...
Dan Hecht
Reported
2026-01-04 11:52:44 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-04 11:52:51 PST
<
rdar://problem/167516099
>
Dan Hecht
Comment 2
2026-01-04 12:04:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56066
EWS
Comment 3
2026-01-04 21:53:28 PST
Committed
305096@main
(d7c68bba90b9): <
https://commits.webkit.org/305096@main
> Reviewed commits have been landed. Closing PR #56066 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug